[metadata]
name = timeflux_UDL
description = An example Timeflux plugin
long_description = file: README.rst
author = Mahesh Tupe
author_email = tupemahesh91@gmail.com
license = MIT
home_page = https://timeflux.io
project_urls =
    Source Code = https://github.com/Asc91/timeflux_UDL
    Bug Tracker = https://github.com/Asc91/timeflux_UDL/issues
classifier =
    Development Status :: 0.1
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords = timeflux

[options]
packages = find:
install_requires =
    timeflux>=0.5.3

[options.extras_require]
dev =
    pytest>=5.3
    sphinx>=2.2
    sphinx_rtd_theme>=0.4
    setuptools_scm
    docinit

[build_sphinx]
warning-is-error = 1